[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Circle.svg" type="Texture" id=1]
[ext_resource path="res://Sprites/light.jpg" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/machine_gun_loop.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/machine_gun_fade.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Oof.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Body" type="Sprite" parent="."]
modulate = Color( 0.945098, 0.843137, 0.533333, 1 )
scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 4 )]
position = Vector2( 32, 0 )

[node name="Hand" type="Node2D" parent="."]
rotation = 0.261799

[node name="Sprite" type="Sprite" parent="Hand"]
modulate = Color( 0.945098, 0.843137, 0.533333, 1 )
position = Vector2( 38, 0 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
energy = 0.95
range_layer_min = -1

[node name="SoundFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="SoundFade" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="SoundOof" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.75
[connection signal="body_entered" from="Area2D" to="." method="_on_Player_body_entered"]
